--- a/src/Ens/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ens/JobeetBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+EnsJobeetBundle_category:
+    pattern: /category/{slug}/{page}
+    defaults: { _controller: EnsJobeetBundle:Category:show, page: 1 }
+
 EnsJobeetBundle_job:
     resource: "@EnsJobeetBundle/Resources/config/routing/job.yml"
     prefix: /job
